Updated DAOs and AccountService, some MessageServi